# audiobooker

./: .gitignore  CONTEXT.md  README.md  package.json  pnpm-lock.yaml
frontend/: .cta.json  drizzle.config.ts  package.json
frontend/drizzle/: 0000_mean_ulik.sql
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/db/: index.ts  schema.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/server/: jobs.ts  paths.ts  projects.ts
worker/: README.md  pyproject.toml
worker/worker/: __init__.py  __main__.py  cli.py  config.py  db.py  runner.py
worker/worker/jobs/: __init__.py  analyze_chapter.py  export_chapter.py  extract_reference_clip.py  fetch_voice_source.py  synthesize_segment.py
worker/worker/llm/: client.py
worker/worker/llm/prompts/: analyze_chapter.txt
worker/worker/tts/: chatterbox.py
