[project]
name = "audiobooker-worker"
version = "0.1.0"
description = "Background worker for Audiobooker — analysis, TTS, and media processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
audiobooker-worker = "worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv]
dev-dependencies = []
